# visualizing_convnets

./: .gitignore  README.md  pyproject.toml
app/: index.html  package.json  pnpm-lock.yaml
app/src/: index.css  types.ts
app/src/api/: index.ts
app/src/components/: ClassificationDisplay.tsx  CorrespondenceAnalysisSection.tsx  DualImageComparison.tsx  Header.tsx  ImageOverlay.tsx  ImageSelector.tsx  OcclusionAnalysisSection.tsx
server/: Dockerfile  constants.py  docker-bake.hcl  main.py  pyproject.toml  run.sh
web/: package-lock.json  package.json
web/src/: App.tsx  types.ts
web/src/components/: ComparisonDisplay.tsx  DualImageComparison.tsx  ImageSelector.tsx  OcclusionAnalysisSection.tsx
