[project]
name = "ml-assignment2"
version = "0.1.0"
description = ""
authors = [
    {name = "yoni_ash",email = "yonatha12345678910@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "flask-cors (>=5.0.1,<6.0.0)",
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
