[project]
name = "ml-assignment2"
version = "0.1.0"
description = ""
authors = [
    { name = "yoni_ash", email = "yonatha12345678910@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12,<4"
dependencies = [
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "flask-jwt-extended==4.7.1",
    "pyjwt==2.10.1",
    "python-dotenv (>=1.1.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
